<?xml version="1.0" encoding="utf-8"?>

<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    >

  <TextView
      android:layout_gravity="start|center_vertical"
      android:text="@string/drawer_deviceInfo_make"
      />

  <TextView
      android:id="@+id/drawer_deviceInfo_make"
      android:layout_width="0dp"
      android:layout_gravity="start|center_vertical|fill_horizontal"
      />

  <TextView
      android:layout_gravity="start|center_vertical"
      android:text="@string/drawer_deviceInfo_model"
      />

  <TextView
      android:id="@+id/drawer_deviceInfo_model"
      android:layout_width="0dp"
      android:layout_gravity="start|center_vertical|fill_horizontal"
      />

  <TextView
      android:layout_gravity="start|center_vertical"
      android:text="@string/drawer_deviceInfo_resolution"
      />

  <TextView
      android:id="@+id/drawer_deviceInfo_resolution"
      android:layout_width="0dp"
      android:layout_gravity="start|center_vertical|fill_horizontal"
      />

  <TextView
      android:layout_gravity="start|center_vertical"
      android:text="@string/drawer_deviceInfo_density"
      />

  <TextView
      android:id="@+id/drawer_deviceInfo_density"
      android:layout_width="0dp"
      android:layout_gravity="start|center_vertical|fill_horizontal"
      />

  <TextView
      android:layout_gravity="start|center_vertical"
      android:text="@string/drawer_deviceInfo_api"
      />

  <TextView
      android:id="@+id/drawer_deviceInfo_api"
      android:layout_width="0dp"
      android:layout_gravity="start|center_vertical|fill_horizontal"
      />

</GridLayout>
